gradle build updates